  * BUGS: add entry for memory leak

* Thu Aug 21 18:27:37 2003, pabs <pabs@pablotron.org>
  * Makefile: mkdir => mkdir -p (is that POSIX?)
  * Makefile: install extras/ in $DATADIR 

* Thu Aug 21 18:33:46 2003, pabs <pabs@pablotron.org>
  * BUGS: mark memory leak as possibly fixed (don't know for sure
    though)

* Fri Aug 22 00:57:15 2003, pabs <pabs@pablotron.org>
  * BUGS: add swedish char mangling reported by salan on IRC (documented
    at http://www.raggle.org/files/swedish_char_corruption/)
  * TODO: added feature requests from Omnic on IRC

* Fri Aug 22 01:19:47 2003, pabs <pabs@pablotron.org>
  * raggle: don't crash on untitled feeds

* Sat Aug 23 00:38:24 2003, heap <vaine@cs.helsinki.fi>
  * raggle: fixed swedish char mangling bug 
	
* Fri Aug 22 18:29:29 2003, pabs <pabs@pablotron.org>
  * raggle: fix "unnamed feed (0/0) (0/0) (0/0) ..." bug

* Sat Aug 23 02:16:51 2003, heap <vaine@cs.helsinki.fi>
  * raggle: fix for the character mangling bug broke 
    HTML rendering (oops), fixed that one.

* Fri Aug 22 21:35:44 2003, pabs <pabs@pablotron.org>
  * raggle: make encoding fall back to iso-8859-1 if it's not defined
    in the $config

* Fri Aug 22 21:56:00 2003, pabs <pabs@pablotron.org>
  * MANIFEST: updated

* Sun Aug 24 20:56:55 2003, pabs <pabs@pablotron.org>
  * raggle: add WEBrick-based web interface to Raggle.  to use it
    install WEBrick (http://www.webrick.org/, apt-get install
    libwebrick-ruby, whatever), "cp -a $PWD/extras/web_ui ~/.raggle/",
    run Raggle like "./raggle --server 2323", then point a web browser
    at http://localhost:2323/
  * README: added note about WEBrick requirement for web interface
  * added extras/web_ui (contains web interface tempates and images)

* Sun Aug 24 21:08:30 2003, pabs <pabs@pablotron.org>
  * removed extras/web_ui/inc/default.css

* Mon Aug 25 16:44:50 2003, pabs <pabs@pablotron.org>
  * raggle.pod: add --add to manpage (reported by sfire||mouse)